--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
       <div id="options">
         <div>
           <span class="options-subtitle">Difficulty:</span><br />
-          <input type="radio" name="difficulty" value="easy" /> Easy 
-          <input type="radio" name="difficulty" value="medium" /> Medium 
-          <input type="radio" name="difficulty" value="hard" /> Hard 
+          <input type="radio" name="difficulty" id="easy" value="easy" /><label for="easy">Easy</label>
+          <input type="radio" name="difficulty" id="medium" value="medium" /><label for="medium">Medium</label>
+          <input type="radio" name="difficulty" id="hard" value="hard" /><label for="hard">Hard</label>
         </div>
 
         <div>
