[v0.2.1] display stats on marked mines

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
             <span class="subtitle">Statistics:</span>
             <span>Nombre de cases dévoilées: </span> <span id="_nb_discovered_cells">0</span><br>
             <span>Nombre de drapeaux placés: </span> <span id="_nb_flags">0</span><br>
+            <span>Nombre de mines marquées: </span> <span id="_nb_marked_mines">0</span><br>
           </div>
         </div>
       </div>
