[v0.4.1] CSS hack and trick to vertical align the game

--- a/index.html
+++ b/index.html
@@ -8,16 +8,23 @@
       padding: 0;
       margin: 0;
       box-sizing: border-box;
+      font-size: 1rem;
     }
+
     body {
       background-color: #ccc;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
     }
 
     .wrapper {
-      position: absolute;
-      top: 40%;
-      left: 50%;
-      transform: translate(-50%, -50%);
+
+    }
+
+    .gameboard {
+      text-align: center;
     }
 
     .hud
