--- a/index.html
+++ b/index.html
@@ -8,19 +8,15 @@
       padding: 0;
       margin: 0;
       box-sizing: border-box;
-      font-size: 1rem;
     }
 
     body {
       background-color: #ccc;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
     }
 
     .wrapper {
-
+      margin: 50px auto 0;
+      max-width: 800px;
     }
 
     .gameboard {
@@ -35,7 +31,7 @@
 
     .hud .section
     {
-      width: 49%;
+      flex: 1;
       border-radius: 3px;
       background-color: #aaa;
       border: 1px solid #eee;
